--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -15,3 +15,105 @@
     :why: free to use
     :versions: []
     :when: 2018-05-17 17:25:00.543350000 Z
+- - :approve
+  - addressable
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:40:23.377712000 Z
+- - :approve
+  - ansi
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:40:29.563147000 Z
+- - :approve
+  - blankslate
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:40:36.452686000 Z
+- - :approve
+  - byebug
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:40:44.124337000 Z
+- - :approve
+  - thread_safe
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:40:49.503875000 Z
+- - :approve
+  - ecommerce
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:07.191528000 Z
+- - :approve
+  - ffi
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:11.396333000 Z
+- - :approve
+  - json
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:14.812773000 Z
+- - :approve
+  - sqlite3
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:20.072857000 Z
+- - :approve
+  - thread
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:23.592911000 Z
+- - :approve
+  - xml-simple
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:28.909573000 Z
+- - :approve
+  - selenium-webdriver
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:37.933831000 Z
+- - :approve
+  - puma
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:44.389926000 Z
+- - :approve
+  - iye
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:41:59.497122000 Z
+- - :approve
+  - rubyzip
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:42:03.655157000 Z
+- - :approve
+  - highline
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:42:08.609801000 Z
+- - :approve
+  - bundler-audit
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 14:42:13.848177000 Z
