--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -117,3 +117,9 @@
     :why: 
     :versions: []
     :when: 2018-06-10 14:42:13.848177000 Z
+- - :approve
+  - annotate
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-10 21:22:31.448926000 Z
