license_finder exclude production

--- a/doc/dependency_decisions.yml
+++ b/doc/dependency_decisions.yml
@@ -123,3 +123,9 @@
     :why: 
     :versions: []
     :when: 2018-06-10 21:22:31.448926000 Z
+- - :ignore_group
+  - production
+  - :who: 
+    :why: 
+    :versions: []
+    :when: 2018-06-21 09:02:01.147951000 Z
