--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -5,5 +5,5 @@ one:
   password_digest: <%= BCrypt::Password.create('secret') %>
 
 two:
-  name: MyString
+  name: MyString2
   password_digest: <%= BCrypt::Password.create('secret') %>
