--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
-!/log/.keep
-!/tmp/.keep
+# !/log/.keep
+# !/tmp/.keep
 
 /node_modules
 /yarn-error.log
@@ -42,4 +42,4 @@ out/
 .ruby-gemset
 .ruby-version
 Guardfile
-#
+*.keep
